--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -7,7 +7,7 @@
 }
 
 .key-word {
-  color: var(--accent-color);
+  color: var(--second-accent-color);
   font-weight: bold;
 }
 
