--- a/src/pages/Experience.module.css
+++ b/src/pages/Experience.module.css
@@ -1,5 +1,5 @@
 .workplaceLink {
-  color: var(--accent-color);
+  color: var(--second-accent-color);
   text-decoration: none;
 }
 
